--- a/package.json
+++ b/package.json
@@ -11,17 +11,32 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "next": "15.4.6",
+    "@tanstack/react-query": "^5.62.16",
+    "@tanstack/react-query-devtools": "^5.62.16",
+    "lucide-react": "^0.469.0",
+    "next-themes": "^0.4.4",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5",
+    "@radix-ui/react-slot": "^1.1.1",
+    "framer-motion": "^12.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
+    "typescript": "^5.7.3",
+    "@types/node": "^22.10.6",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.6",
+    "@tailwindcss/postcss": "^4.0.1",
+    "tailwindcss": "^4.0.1",
+    "eslint": "^9.18.0",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3.2.0",
+    "postcss": "^8.5.1",
+    "autoprefixer": "^10.4.20"
+  },
+  "packageManager": "pnpm@9.15.3",
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
   }
 }
