--- a/package.json
+++ b/package.json
@@ -2,6 +2,24 @@
   "name": "the-hacker-news-mini",
   "version": "0.1.0",
   "private": true,
+  "description": "A modern, performant Hacker News client built with Next.js 15",
+  "author": {
+    "name": "Sreeharsh Rajan",
+    "email": "hello@sreeharsh.dev",
+    "url": "https://sreeharsh.dev"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sreeharshrajan/the-hacker-news-mini.git"
+  },
+  "keywords": [
+    "hackernews",
+    "nextjs",
+    "react",
+    "typescript",
+    "tailwindcss",
+    "shadcn"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,30 +27,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6",
-    "@tanstack/react-query": "^5.62.16",
-    "@tanstack/react-query-devtools": "^5.62.16",
-    "lucide-react": "^0.469.0",
-    "next-themes": "^0.4.4",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-query-devtools": "^5.85.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.5",
-    "@radix-ui/react-slot": "^1.1.1",
-    "framer-motion": "^12.0.0"
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
+    "next": "15.4.6",
+    "next-themes": "^0.4.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
-    "@types/node": "^22.10.6",
-    "@types/react": "^19.0.6",
-    "@types/react-dom": "^19.0.6",
-    "@tailwindcss/postcss": "^4.0.1",
-    "tailwindcss": "^4.0.1",
-    "eslint": "^9.18.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.33.0",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3.2.0",
-    "postcss": "^8.5.1",
-    "autoprefixer": "^10.4.20"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5.9.2"
   },
   "packageManager": "pnpm@9.15.3",
   "engines": {
